# commit-prefix-pre-commit

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
commit_prefix_pre_commit/: __init__.py  hook.py
