[metadata]
name = commit-prefix-pre-commit
version = attr: commit_prefix_pre_commit.__version__
author = JangasCodingplace
author_email = janisgoesser92@gmail.com
url = https://github.com/JangasCodingplace/commit-prefix-pre-commit
description = A python script to prefix commit messages with conventional commit compatible messages based on the branch name
long_description = file: README.md
license = MIT
classifiers=
  "Intended Audience :: Developers"
  "Programming Language :: Python :: 3"
  "License :: OSI Approved :: MIT License"
  "Operating System :: OS Independent"


[options]
python_requires = >=3.10
packages = find:
include_package_data = true
install_requires =
  setuptools >= 58.1.0


[options.entry_points]
console_scripts =
  commit-prefix-pre-commit = "commit_prefix_pre_commit.hook:main"

[scripts]
commit-prefix-pre-commit = commit_prefix_pre_commit.hook:main

[tool.setuptools]
packages = ["conventional_pre_commit"]
